syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Notifications.Grpc.Protos";

service NotificationsProtoService {

	rpc SendNotification (SendNotificationRequest) returns (google.protobuf.Empty);	  
}

message SendNotificationRequest {
	enum NotificationType {
		EMAIL = 0;
	}
	NotificationType type = 1;
	EmailMessageModel email_message = 2;	
}

message EmailMessageModel {
	string recipient = 1;
	string subject = 2;
	string body = 3;
}